# serbian-tokenizer

./: README.md  build.sh  build_and_install.sh  install.sh  pyproject.toml
data/test/politika/: create_dataset.sh  file_list.txt
data/test/politika/expected/: 652861_prvi-januar-u-ulici-otvorenog-srca.txt  652950_teheran-pozvao-saudijskog-ambasadora-na-razgovor-zbog-pogubljenja-sest-iranaca.txt  652967_gradani-arilja-pale-svece-ispred-kafica-gde-je-ubijen-bracni-par.txt  653190_od-maskarade-do-krcka-orascica.txt  653587_hocu-necu-januarski-ispitni-rok.txt  653674_gasic-uneo-badnjak-u-zgradu-ministarstva-odbrane-i-cestitao-bozic-vernicima-spc.txt  654009_srpsku-je-izgradila-srpska-sloga.txt  654611_snezana-i-sedam-patuljaka-u-nacionalnom-teatru.txt  654864_nova-godina-u-beogradu.txt  657134_americka-teniserka-medison-kiz-osvojila-australijan-open.txt  657990_pomilovana-dekanka-filozofskog-fakulteta-u-nisu-hapsena-i-optuzena-zbog-mita.txt  658677_aleksandar-katai-u-97-minutu-doneo-pobedu-fudbalerima-crvene-zvezde-protiv-tsc-a.txt  (+87 more)
data/train/: abbreviations_dict.txt
src/experiments/: results.md  run_tests.sh
src/experiments/tokenizers/: punktrus_srbregex.sh  punktrus_treebank.sh  punktrus_whitespace.sh  punktsrb_srbregex.sh
src/srbtok/: __init__.py  __main__.py  cascade_tokenizer.py  norm_punkt_tokenizer.py  srb_cascade_tokenizer.py  srb_regexp_word_tokenizer.py  srb_tokenizer.py  utils.py
src/tools/: nltk_tokenize.py  score.py
src/train_punkt/: train_nltk_punkt.py  train_serbian.sh
test/: nltk_tokenize_test.py  score_test.py  srbtok_test.py
(+99 files in other folders)
