[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srbtok"
version = "0.1.0"
description = "Word and sentence tokenization for Serbian Cyrillic."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later" 
license-files = ["LICENSE*"] 

dependencies = [
    "click==8.3.1",
    "joblib==1.5.3",
    "levenshtein==0.27.3",
    "nltk==3.9.2",
    "rapidfuzz==3.14.3",
    "regex==2025.11.3",
    "tqdm==4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["srbtok*"]
exclude = ["experiments*", "tools*", "train_punkt*"]

# Automatically includes your license files in the build
